--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 .header-client {
-  background-color: #f9f9f9;
+  background-color: #fcfcfc;
 }
 .bg-button-g {
   background-color: #44aadb;
