update: get api provinces and update UI , RPS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,13 @@ body {
 .bg-button-g:hover {
    background-color: #efb83f;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type="number"] {
+  -moz-appearance: textfield; 
+}
